# battery-notifier

./: Cargo.toml  README.md  debug.yaml  default.nix  flake.nix
.github/: LICENSE  README.md
.github/workflows/: rust.yml
nix/: hm-module.nix  nixos-module.nix
src/: battery.rs  cli.rs  config.rs  main.rs  notify.rs
systemd/: battery-notifier.service
