[package]
name = "battery-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
linuxver = "0.1.0"
os_info = { version = "3.7.0", default-features = false }
serde_yaml = "0.9.30"
soloud = { git = "https://github.com/MoAlyousef/soloud-rs" }
toml = "0.8.8"
