[package]
name = "battery-notifier"
description = "A customizable battery notifier for Linux kernels focused in BAT0 and BAT1"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/luisnquin/battery-notifier"
readme = "README.md"
license-file = ".github/LICENSE"

authors = ["Luis Quiñones <lpaandres2020@gmail.com>"]


[[bin]]
name = "battery-notifier"
test = false
bench = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
linuxver = "0.1.0"
os_info = { version = "3.7.0", default-features = false }
serde_yaml = "0.9.30"
soloud = { git = "https://github.com/MoAlyousef/soloud-rs" }
toml = "0.8.8"
notify-rust = "4.10.0"
anstyle = "1.0.4"
log = "0.4.20"
env_logger = "0.11.1"
